--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 	<script src="js/jquery.2.0.js"></script>
 
 	<script src="js/jquery.pointOut.js"></script>
+	<script src="http://cdnjs.cloudflare.com/ajax/libs/jquery-easing/1.3/jquery.easing.min.js"></script>
 	<link rel="stylesheet" href="css/style.css"/>
 
 
@@ -19,10 +20,10 @@
 <h1>PLUGIN pointOut</h1>
 
 
-<div class="example example_1" id="el01"> first </div>
-<div class="example example_2" id="el02"> second </div>
-<div class="example example_3" id="el03"> third </div>
-
+<div class="example example_1" id="el01"> first</div>
+<div class="example example_2" id="el02"> second</div>
+<div class="example example_3" id="el03"> third</div>
+<div class="example example_4" id="el04"> forth</div>
 
 
  
